Fixing canvas overflow issue

--- a/zefir/src/assets/main.css
+++ b/zefir/src/assets/main.css
@@ -10,6 +10,10 @@
   font-weight: normal;
 }
 
+body{
+  overflow: hidden;
+}
+
 a,
 .green {
   text-decoration: none;
@@ -20,11 +24,5 @@ a,
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (-webkit-device-pixel-ratio: 1.25) {
-  * {
-    zoom: 0.9999;
   }
 }
